# desktop-trader

./: .gitignore  CMakeLists.txt  README.md  config.json.template
include/: App.h  ChartPanel.h  ChartRenderer.h  Config.h  CryptoAPIClient.h  PositionsPanel.h  SimpleHttpClient.h  TradingPanel.h  TradingUI.h  main.h
src/: App.cpp  App.h  ChartPanel.cpp  ChartRenderer.cpp  Config.cpp  CryptoAPIClient.cpp  PositionsPanel.cpp  TradingPanel.cpp  TradingUI.cpp  main.cpp
